Added Game Controller Tile Entity
Didn't test if it still runs ....

--- a/src/main/resources/assets/deathcube/lang/en_US.lang
+++ b/src/main/resources/assets/deathcube/lang/en_US.lang
@@ -1,3 +1,4 @@
 # Block Localizations
 tile.deathcube:capturepoint.name=Capture Point
 tile.deathcube:spawnpoint.name=Spawn Point
+tile.deathcube:gamecontroller.name=DeathCube Game Controller
