Removed Network Mess
Added more Game Controller flow.
Tried to add a command.  Won't register.

--- a/src/main/resources/assets/deathcube/lang/en_US.lang
+++ b/src/main/resources/assets/deathcube/lang/en_US.lang
@@ -2,3 +2,5 @@
 tile.deathcube:capturepoint.name=Capture Point
 tile.deathcube:spawnpoint.name=Spawn Point
 tile.deathcube:gamecontroller.name=DeathCube Game Controller
+
+commands.game.usage=/game <start|end>
