Converted Capture Point to TE
Created general example block (non-TE).
Ready to save data from GUI.

--- a/src/main/resources/assets/deathcube/lang/en_US.lang
+++ b/src/main/resources/assets/deathcube/lang/en_US.lang
@@ -1,4 +1,5 @@
 # Block Localizations
+tile.deathcube:example.name=Example Block
 tile.deathcube:capturepoint.name=Capture Point
 tile.deathcube:spawnpoint.name=Spawn Point
 tile.deathcube:gamecontroller.name=DeathCube Game Controller
