Added Force Field Block and its ability to damage a player entity
DamageAmount on the BlockForceField sets the amount of damage given

--- a/src/main/resources/assets/deathcube/lang/en_US.lang
+++ b/src/main/resources/assets/deathcube/lang/en_US.lang
@@ -3,5 +3,6 @@ tile.deathcube:example.name=Example Block
 tile.deathcube:capturepoint.name=Capture Point
 tile.deathcube:spawnpoint.name=Spawn Point
 tile.deathcube:gamecontroller.name=DeathCube Game Controller
+tile.deathcube:forcefield.name=Force Field
 
 commands.game.usage=/game <start|end>
