Added custom death messages to the force field

--- a/src/main/resources/assets/deathcube/lang/en_US.lang
+++ b/src/main/resources/assets/deathcube/lang/en_US.lang
@@ -6,3 +6,11 @@ tile.deathcube:gamecontroller.name=DeathCube Game Controller
 tile.deathcube:forcefield.name=Force Field
 
 commands.game.usage=/game <start|end>
+
+
+
+death.attack.deathcube:FORCE_FIELD_DEATH_1=%s tried to hug the force field. It hugged back too hard!
+death.attack.deathcube:FORCE_FIELD_DEATH_2=Remember %s, Force fields hurt! 
+death.attack.deathcube:FORCE_FIELD_DEATH_3=%s, you had one job.. Don't touch the force field!
+death.attack.deathcube:FORCE_FIELD_DEATH_4=%s screamed out in pain, peed himself then died to the force field.
+death.attack.deathcube:FORCE_FIELD_DEATH_5=%s, Next time don't believe Help the force field CAN kill.
