GameController GUI Updates + Force Field Changes
New Page for GameController GUI.  Set Force Field dimensions.  Does not
yet generate the force field.  :-1:
Various fields added with value-checking.
Force Field only hurts when it is active.  TODO's: Apply "knockback" to
players who collide with the force field.  Allow pass-through on
right-click while in lobby.

Need to review these changes again later to make sure everything is
tested.  Added some things to DeathCube.java that may need more testing.
Yet, force field states and now Spectating while in death penalty seem
to be working.

--- a/src/main/resources/assets/deathcube/lang/en_US.lang
+++ b/src/main/resources/assets/deathcube/lang/en_US.lang
@@ -9,8 +9,12 @@ commands.game.usage=/game <start|end>
 
 
 
-death.attack.deathcube:FORCE_FIELD_DEATH_1=%s tried to hug the force field. It hugged back too hard!
-death.attack.deathcube:FORCE_FIELD_DEATH_2=Remember %s, Force fields hurt! 
-death.attack.deathcube:FORCE_FIELD_DEATH_3=%s, you had one job.. Don't touch the force field!
-death.attack.deathcube:FORCE_FIELD_DEATH_4=%s screamed out in pain, peed himself then died to the force field.
-death.attack.deathcube:FORCE_FIELD_DEATH_5=%s, Next time don't believe Help the force field CAN kill.
+death.attack.deathcube:FORCE_FIELD_DEATH_1=%s tried to hug the Force Field.  It hugged back too hard!
+death.attack.deathcube:FORCE_FIELD_DEATH_2=Remember %s, Force Fields hurt! 
+death.attack.deathcube:FORCE_FIELD_DEATH_3=%s, you had one job...  Don't touch the Force Field!
+death.attack.deathcube:FORCE_FIELD_DEATH_4=%s screamed out in pain, emptied his bladder, and then died to the Force Field.
+death.attack.deathcube:FORCE_FIELD_DEATH_5=%s, next time, don't believe Help; the Force Field CAN kill.
+death.attack.deathcube:FORCE_FIELD_DEATH_6=%s, always respect the personal space of a Force Field.
+death.attack.deathcube:FORCE_FIELD_DEATH_7=%s got fried by pure energy!
+death.attack.deathcube:FORCE_FIELD_DEATH_8=%s sizzled and died.
+death.attack.deathcube:FORCE_FIELD_DEATH_9=And that's why it's called DeathCube, %s.
