Starting Gear Config - Started
I didn't want to use a separate block/TE for this, but I *really* didn't
want to mess with adding it to the GameController.

First attempt on a GUI with inventory.  What is sided-inventory?  I
might have removed some of that stuff from one of Tech's (fermenter)
TE's that I copied this from.  It crashes when you place the block.

Planning to add a button that copies your current inventory into the
upper inventory.  Nice dup "bug", but doesn't matter for
non-Survival-based game.  Need to make sure to include a copy of Armor.
Probably need 4 more slots in the GUI then.

--- a/src/main/resources/assets/deathcube/lang/en_US.lang
+++ b/src/main/resources/assets/deathcube/lang/en_US.lang
@@ -4,6 +4,7 @@ tile.deathcube:lobby.name=Lobby Block
 tile.deathcube:capturepoint.name=Capture Point
 tile.deathcube:spawnpoint.name=Spawn Point
 tile.deathcube:gamecontroller.name=DeathCube Game Controller
+tile.deathcube:startinggearconfig.name=DeathCube Starting Gear Config
 tile.deathcube:forcefield.name=Force Field
 
 commands.game.usage=/game <start|end>
