--- a/src/main/resources/assets/deathcube/lang/en_US.lang
+++ b/src/main/resources/assets/deathcube/lang/en_US.lang
@@ -7,7 +7,7 @@ tile.deathcube:gamecontroller.name=DeathCube Game Controller
 tile.deathcube:startinggearconfig.name=DeathCube Starting Gear Config
 tile.deathcube:forcefield.name=Force Field
 
-commands.game.usage=/game <start|end>
+commands.game.usage=/game <start | end | refresh>
 
 
 
