--- a/src/main/resources/assets/deathcube/lang/en_US.lang
+++ b/src/main/resources/assets/deathcube/lang/en_US.lang
@@ -8,7 +8,7 @@ tile.deathcube:gamecontroller.name=DeathCube Game Controller
 tile.deathcube:startinggearconfig.name=DeathCube Starting Gear Config
 tile.deathcube:forcefield.name=Force Field
 
-item.deathcube:example.name=Example Item
+item.deathcube:example_item.name=DeathCube Skull
 
 commands.game.usage=/game <start | end | refresh>
 
