--- a/src/main/resources/assets/deathcube/lang/en_US.lang
+++ b/src/main/resources/assets/deathcube/lang/en_US.lang
@@ -7,6 +7,7 @@ tile.deathcube:spawnpoint.name=Spawn Point
 tile.deathcube:gamecontroller.name=DeathCube Game Controller
 tile.deathcube:startinggearconfig.name=DeathCube Starting Gear Config
 tile.deathcube:forcefield.name=Force Field
+tile.deathcube:forcefieldgen.name=Force Field Generator
 
 item.deathcube:deathskull.name=Death Skull
 item.deathcube:lifeskull.name=Life Skull
