Added Mine Block
Should create an explosion when entered or mined.  May cause crash due
to assets - trying to make it like a pressure plate in size and render,
but only 1 state.

--- a/src/main/resources/assets/deathcube/lang/en_US.lang
+++ b/src/main/resources/assets/deathcube/lang/en_US.lang
@@ -7,6 +7,7 @@ tile.deathcube:forcefieldgen.name=Force Field Generator
 tile.deathcube:gamecontroller.name=DeathCube Game Controller
 tile.deathcube:lobby.name=Lobby Block
 tile.deathcube:loot_block.name=Loot Block
+tile.deathcube:mine_block.name=Trip Mine
 tile.deathcube:spawnpoint.name=Spawn Point
 tile.deathcube:startinggearconfig.name=DeathCube Starting Gear Config
 
