--- a/src/main/resources/assets/deathcube/lang/en_US.lang
+++ b/src/main/resources/assets/deathcube/lang/en_US.lang
@@ -11,8 +11,12 @@ tile.deathcube:mine_block.name=Trip Mine
 tile.deathcube:spawnpoint.name=Spawn Point
 tile.deathcube:startinggearconfig.name=DeathCube Starting Gear Config
 
+
 item.deathcube:deathskull.name=Death Skull
 item.deathcube:lifeskull.name=Life Skull
+item.deathcube:turret.name=Turret
+item.deathcube:rpglauncher.name=RPG Launcher
+
 
 commands.game.usage=/game <start | end | refresh>
 
