rendering version with spawn item but renders minions in same fashion as player (same direction etc)

--- a/src/main/resources/assets/deathcube/lang/en_US.lang
+++ b/src/main/resources/assets/deathcube/lang/en_US.lang
@@ -17,6 +17,7 @@ item.deathcube:lifeskull.name=Life Skull
 item.deathcube:turret.name=Turret
 item.deathcube:rpglauncher.name=RPG Launcher
 item.deathcube:airstrikeradio.name=Airstrike Radio
+item.deathcube:minion.name=Mini-me
 
 
 commands.game.usage=/game <start | end | refresh>
